--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,8 @@
 {% extends "index.html" %}
 {% block content %}
+<!--
+this is commented out because I dont want the app to have a UI but I built this just to get it started
+and left it just in case I wanted to understand how to use the extensions and html templates
 <div class="container">
     <form class="row" action="/launch/client" method="post">
         <div class="row">
@@ -12,4 +15,5 @@
         </div>
     </form>
 </div>
+-->
 {% endblock %}
